# drf-api-deploy

./: docker-compose.yml  heroku.yml  pyproject.toml  requirements.txt
light/: views.py
lights_project/: .env  settings.py  urls.py
